# BulletNote

./: .gitignore  LICENSE.md  README.md
Bullet/: README.md  pyproject.toml
Bullet/src/: Parse.py
Bullet/src/parser/: Parser.py
notes/: bullet.ini  note.bullet  note.bullet.html
notes/History/: n1.bullet  n1.bullet.html
notes/Math/: n.bullet  n.bullet.html
src/: Parse.py  notes.bullet  notes.html
src/document/: Document.py
src/parser/: Parser.py
