[project]
name = "BulletNote"
version = "0.1"
dependencies = [
    "click",
    
]
authors = [
  { name="dgsqef"},
]
description = "A text format for easy note writing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    
    "Operating System :: OS Independent",
]
[project.scripts]
Bulletparse = "Parse:parse"

[project.urls]
Homepage = "https://github.com/dgsqf/BulletNotet"
Issues = "https://github.com/dgsqf/BulletNote/issues"